# finance_analyse_telegram_bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
fin_analyse_bot/: .dockerignore  Dockerfile  main.py  requirements.txt
fin_analyse_bot/database/: categories.py  database.py  exceptions.py  expenses.py
fin_analyse_bot/utils/: keyboards.py  middlewares.py
init/: createtable.sql
